# ewf-forensic

./: .gitignore  Cargo.toml  README.md  THREATS.md  deny.toml  mkdocs.yml  release-plz.toml  renovate.json  rust-toolchain.toml
.github/workflows/: ci.yml  fuzz.yml  release-plz.yml  release.yml
cli/: Cargo.toml
cli/src/: handlers.rs  main.rs  mcp.rs
cli/wix/: License.rtf  main.wxs
core/: CHANGELOG.md  Cargo.toml
core/docs/: corpus-validation.md  implementation-notes.md  parallel-chunk-decompression-task.md
core/examples/: bench_table.rs
core/fuzz/: .gitignore  Cargo.toml
core/fuzz/fuzz_targets/: parse_header.rs  parse_segment.rs
core/src/: chunk_table.rs  lib.rs  reader.rs  sections.rs  segment_source.rs  vfs.rs
core/tests/: concurrent_reads.rs  corpus_differential.rs  e2e_dftt.rs  e2e_ntfs_over_ewf.rs  extended_corpus.rs  lazy_byte_identity.rs  robustness_tests.rs  segment_source_identity.rs  validate_maxpowers.rs  validate_pcmus.rs  validate_szechuan.rs
core/tests/data/: README.md
docs/: PRD.md  VALIDATION.md  anomaly-catalog.md  index.md  privacy.md  terms.md  validation.md
docs/decisions/: 0001-reader-analyzer-workspace-split.md  0002-pure-rust-no-libewf.md  0003-forensic-consumes-ewf-sections.md  0004-unsafe-posture-forbid-reader-deny-analyzer.md  0005-panic-free-fuzzed-parsing.md  0006-adler32-via-adler2-crate.md  0007-forensic-vfs-imagesource-contract.md  0008-low-msrv-floor-dev-toolchain-pin.md  0009-tolerant-recovery-to-new-output.md
examples/: validate.rs
forensic/: CHANGELOG.md  Cargo.toml
forensic/fuzz/: Cargo.toml
forensic/fuzz/fuzz_targets/: fuzz_integrity.rs  fuzz_multisegment.rs  fuzz_recover.rs  fuzz_repair.rs
forensic/src/: integrity.rs  integrity_path.rs  lib.rs  recover.rs
forensic/tests/: analyse_and_compute_hashes_tests.rs  builder.rs  cli_tests.rs  ctf_fixture_tests.rs  display_tests.rs  ewf1_header_metadata_tests.rs  ewf1_missing_section_tests.rs  ewf1_multiseg_fixture_tests.rs  ewf1_table2_tests.rs  ewf2_compressed_chunk_tests.rs  ewf2_full_verification_tests.rs  ewf2_geometry_tests.rs  ewf2_media_info_tests.rs  ewf2_multiseg_discovery_tests.rs  ewf2_multiseg_hash_tests.rs  ewf2_real_fixture_tests.rs  integrity_tests.rs  progress_tests.rs  proptest_tests.rs  real_image_tests.rs  recover_tests.rs  serde_tests.rs  sleuthkit_fixture_tests.rs
forensic/tests/data/: README.md  multiseg_v1.E05  multiseg_v1.E07
fuzz/: Cargo.toml
src/: error.rs  integrity.rs  integrity_path.rs  lib.rs  repair.rs
supply-chain/: config.toml
tests/: analyse_and_compute_hashes_tests.rs  builder.rs  canonical_finding_tests.rs  canonicalise_tests.rs  chunk_integrity_tests.rs  cli_progress_tests.rs  cli_tests.rs  compute_hashes_tests.rs  ctf_fixture_tests.rs  differential_tests.rs  display_tests.rs  ewf1_error2_tests.rs  ewf1_header_metadata_tests.rs  ewf1_missing_section_tests.rs  ewf1_multiseg_fixture_tests.rs  ewf1_table2_tests.rs  ewf1_table_chunk_count_tests.rs  ewf1_table_header_crc_tests.rs  ewf2_compressed_chunk_tests.rs  ewf2_compression_method_tests.rs  ewf2_full_verification_tests.rs  ewf2_geometry_tests.rs  ewf2_large_offset_tests.rs  ewf2_media_info_tests.rs  ewf2_multiseg_discovery_tests.rs  ewf2_multiseg_hash_tests.rs  ewf2_partial_coverage_tests.rs  ewf2_real_fixture_tests.rs  ewf2_sha1_tests.rs  ewf2_sha256_tests.rs  external_hash_tests.rs  integrity_tests.rs  libewf_quirks_tests.rs  new_capabilities_tests.rs  path_progress_tests.rs  progress_tests.rs  real_image_tests.rs  repair_tests.rs  serde_tests.rs  sleuthkit_fixture_tests.rs  (+2 more)
tests/data/: README.md  multiseg_v1.E02  multiseg_v1.E03  multiseg_v1.E06  multiseg_v1.E08  zeros_128s_compressed.Ex01
tests/fixtures/: README.md  multiseg_v1.E01  multiseg_v1.E04  zeros_128s.Ex01
