[package]
name = "ewf-forensic"
version = "0.5.0"
edition = "2021"
rust-version = "1.85"
description = "Forensic integrity analysis and repair for EWF (Expert Witness Format / E01) images"
license = "Apache-2.0"
repository = "https://github.com/SecurityRonin/ewf-forensic"
authors = ["Albert Hui"]
keywords = ["forensics", "ewf", "e01", "integrity", "tampering"]
categories = ["parser-implementations"]
# Keep the published package under crates.io's 10 MiB limit — test E01 corpora
# and fuzz artifacts are not needed to build the crate.
exclude = ["tests/data/", "fuzz/", "corpus/", "benches/", ".github/"]

[lib]
name = "ewf_forensic"

[[bin]]
name = "ewf-check"
path = "src/bin/ewf_check.rs"

[[test]]
name = "serde_tests"
required-features = ["serde"]

[features]
serde = ["dep:serde", "forensicnomicon/serde"]

[dependencies]
forensicnomicon = "0.3.1"
flate2 = "1"
md-5 = "0.10"
memmap2 = "0.9"
sha1 = "0.10"
sha2 = "0.10"
serde = { version = "1", features = ["derive"], optional = true }
indicatif = "0.17"

[dev-dependencies]
tempfile = "3"
md-5 = "0.10"
sha1 = "0.10"
hex = "0.4"
serde_json = "1"
# Oracle for doer-checker TDD: blazehash independently computes expected hashes
blazehash = { path = "../blazehash", default-features = false }
proptest = "1"
