[workspace]
resolver = "2"
members = ["core", "cli", "forensic"]
# The two cargo-fuzz crates are self-contained (nightly-only libfuzzer) and each
# carries its own `[workspace]`, so they are excluded from this stable workspace.
exclude = ["core/fuzz", "forensic/fuzz"]

# Single source of truth for fields shared (identical) by every member (DRY).
# `version` is NOT hoisted: the reader (core/cli, 0.3.0) and the analyzer
# (forensic, 0.5.0) are versioned independently, so each keeps its own `version`
# inline. `keywords`/`documentation` also stay per-crate (they differ by crate).
[workspace.package]
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/SecurityRonin/ewf-forensic"
homepage = "https://github.com/SecurityRonin/ewf-forensic"
authors = ["Albert Hui <albert@securityronin.com>"]

# Single source of truth for dependency versions (DRY): declare each once;
# members write `dep.workspace = true`. The inter-crate `ewf` (the reader) version
# lives here too, so a bump touches one line. The reader's deps are hoisted; the
# analyzer (forensic) keeps its own deps inline (different version pins / oracle).
[workspace.dependencies]
ewf = { path = "core", version = "0.4.5" }
flate2 = "1"
# adler-32 over EWF section CRCs (the section-checksum format fact). Already in
# the tree via flate2; declared directly so `ewf::sections` can compute it.
adler2 = "2"
lru = "0.12"
rayon = "1"
thiserror = "2"
log = "0.4"
glob = "0.3"
md-5 = "0.10"
sha-1 = "0.10"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"

# The reader (core/cli) is `forbid(unsafe)` and uses this paranoid lint set.
# The analyzer (forensic) needs exactly one audited mmap `unsafe`, so it keeps
# its OWN inline `[lints]` (`unsafe_code = "deny"` + bounded allow) rather than
# inheriting this — the two cannot share one workspace lint table.
[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
module_name_repetitions = { level = "allow", priority = 1 }
# Byte-layout diagrams in doc comments (offset tables, descriptor maps) read as
# prose tokens to the lint; backticking every offset is noise, not clarity.
doc_markdown = { level = "allow", priority = 1 }
must_use_candidate = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
cast_possible_truncation = { level = "allow", priority = 1 }
cast_possible_wrap = { level = "allow", priority = 1 }
cast_sign_loss = { level = "allow", priority = 1 }
cast_precision_loss = { level = "allow", priority = 1 }
format_push_string = { level = "allow", priority = 1 }
format_collect = { level = "allow", priority = 1 }
too_many_lines = { level = "allow", priority = 1 }
items_after_statements = { level = "allow", priority = 1 }
similar_names = { level = "allow", priority = 1 }
manual_let_else = { level = "allow", priority = 1 }
