[package]
name = "ewf-forensic-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[[bin]]
name = "fuzz_integrity"
path = "fuzz_targets/fuzz_integrity.rs"
test = false
doc = false

[[bin]]
name = "fuzz_repair"
path = "fuzz_targets/fuzz_repair.rs"
test = false
doc = false

[dependencies]
libfuzzer-sys = "0.4"
ewf-forensic = { path = ".." }

[profile.release]
debug = 1
