[package]
name = "ewf-forensic-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

# Self-contained cargo-fuzz workspace, excluded from the parent so `cargo
# build --workspace` does not pull libfuzzer (nightly-only) into the stable build.
[workspace]

[[bin]]
name = "fuzz_integrity"
path = "fuzz_targets/fuzz_integrity.rs"
test = false
doc = false

[[bin]]
name = "fuzz_multisegment"
path = "fuzz_targets/fuzz_multisegment.rs"
test = false
doc = false

[dependencies]
libfuzzer-sys = "0.4"
ewf-forensic = { path = ".." }

[profile.release]
debug = 1
